# SpendWise-AI

./: .gitignore  COMPLETE_PROJECT_SUMMARY.md  EMAIL_AUTOMATION_GUIDE.md  INSTALLATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP_GUIDE.md  START.bat  USER_GUIDE.md  main.py  pyproject.toml  quick-start.bat
backend/: .env.example  requirements.txt
backend/app/: database.py  main.py
backend/app/api/v1/endpoints/: ai.py  analytics.py  auth.py  bank_statements.py  budgets.py  categories.py  email_integration.py  transactions.py  users.py
backend/app/core/: config.py  security.py
backend/app/models/: ai_insight.py  bank_statement.py  budget.py  category.py  spending_pattern.py  transaction.py  user.py
backend/app/services/: ai_coach.py  ai_recommendations.py  email_parser.py  password_handler.py  pdf_parser.py  pdf_parser_enhanced.py  sms_forwarding_handler.py
backend/tests/: test_bank_statements.py  test_transactions.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  styles.css
frontend/src/components/AI/: AIChat.css  AIChat.js
frontend/src/components/Auth/: Login.js  Register.js
frontend/src/components/BankStatement/: PasswordPrompt.js  UploadStatement.js
frontend/src/components/Common/: Footer.js  Header.js  PrivateRoute.js
frontend/src/components/Dashboard/: Dashboard.css  Dashboard.js  ExpenseTracker.js  Notifications.js  Reports.js
frontend/src/components/Email/: EmailIntegration.js
frontend/src/contexts/: AuthContext.js
frontend/src/services/: api.js
